# de-test-app

./: Dockerfile  Dockerfile.local  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: .env.dist  app.py
src/adapters/into/http/: embeddings.py  users.py
src/ports/into/: users.py
src/tests/integration/adapters/into/: test_users.py
src/utils/: env.py  workos_client.py
