[tool.poetry]
name = "de-app"
version = "0.1.0"
description = ""
authors = ["platowski <latosbassman@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
uvicorn = "^0.24.0"
pyyaml = "^6.0.1"
pydantic-settings = "^2.0.3"
aiohttp = "^3.9.1"
workos = "^4.12.0"

[tool.poetry.dev-dependencies]
black = { version = "^24.4.2", extras = [ "d" ] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
